tests/ui/basic/call_before_declare.stderr
error: undefined function `foo`
 --> tests/ui/basic/call_before_declare.rs:6:17
  |
6 |         let x = foo(1);
  |                 ^^^
